syntax = "proto3";

package zero;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.Genesis";

service BasicContractZero {
    option (aelf.csharp_state) = "AElf.Contracts.Genesis.BasicContractZeroState";

    
    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }
    rpc SetInitialControllerAddress (aelf.Address) returns (google.protobuf.Empty) {
    }
}

message InitializeInput{
    bool contract_deployment_authority_required = 1;
}

message ContractProposingInput{
    aelf.Address proposer = 1;
    ContractProposingInputStatus status = 2;
    google.protobuf.Timestamp expired_time = 3;
}

enum ContractProposingInputStatus {
    PROPOSED = 0;
    APPROVED = 1;
    CODE_CHECK_PROPOSED = 2;
    CODE_CHECKED = 3;
}